[gd_scene load_steps=12 format=3 uid="uid://b5ggfojh75kqn"]

[ext_resource type="TileSet" uid="uid://ckdj8m24olhk1" path="res://Assets/tilemap.tres" id="1_dy721"]
[ext_resource type="Script" path="res://Levels/level_16_heros_shadow.gd" id="1_vy2iq"]
[ext_resource type="PackedScene" uid="uid://b5heeqig4y3my" path="res://Entities/Hero/hero.tscn" id="2_oiejt"]
[ext_resource type="PackedScene" uid="uid://cfoh1qycxtqc0" path="res://Entities/ShadowBoss/shadow_boss.tscn" id="3_sgme1"]
[ext_resource type="PackedScene" uid="uid://duwpkeop6bhdk" path="res://World/Chest/treasure_chest.tscn" id="5_wbwr1"]
[ext_resource type="PackedScene" uid="uid://crpye41vvqrt0" path="res://World/CollapsingPlatform/collapsing_platform.tscn" id="6_qny53"]
[ext_resource type="PackedScene" uid="uid://dwcrlgrxpc5qs" path="res://Entities/ResizableBox/big_box.tscn" id="7_ei2rj"]
[ext_resource type="PackedScene" uid="uid://caeeg0qxnw4sc" path="res://World/Trap/trap.tscn" id="8_o5bhu"]
[ext_resource type="PackedScene" uid="uid://hkwu5mgomxyh" path="res://World/Door/portal.tscn" id="9_cbhcp"]
[ext_resource type="PackedScene" uid="uid://wsmlmhofoyky" path="res://World/BarredDoor/prison_bars.tscn" id="10_5vn20"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1irk7"]
size = Vector2(44, 58)

[node name="Level-16-Heros-Shadow" type="Node2D" groups=["level"]]
script = ExtResource("1_vy2iq")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_dy721")
format = 2
layer_0/name = "World"
layer_0/tile_data = PackedInt32Array(12, 327680, 2, 11, 131072, 1, 10, 131072, 1, 9, 131072, 1, 8, 131072, 1, 7, 131072, 1, 6, 131072, 1, 5, 131072, 1, 4, 131072, 1, 3, 131072, 1, 2, 131072, 1, 1, 131072, 1, 0, 131072, 1, 65535, 131072, 1, 65534, 131072, 1, 65533, 131072, 1, 65532, 131072, 1, 65531, 131072, 1, 65530, 131072, 1, 65529, 131072, 1, 65528, 131072, 1, 65527, 131072, 1, 65526, 131072, 1, 65525, 131072, 1, 65524, 131072, 1, 65523, 131072, 1, 65522, 131072, 1, 65521, 131072, 1, 65520, 131072, 1, 65519, 131072, 1, 65518, 131072, 1, 65517, 131072, 1, 65516, 131072, 1, 65515, 131072, 1, 65514, 131072, 1, 65513, 131072, 1, 65512, 131072, 1, 65511, 131072, 1, 65510, 131072, 1, -327668, 327680, 3, -327669, 131072, 3, -327670, 131072, 3, -327671, 131072, 3, -327672, 131072, 3, -327673, 131072, 3, -327674, 131072, 3, -327675, 131072, 3, -327676, 131072, 3, -327677, 131072, 3, -327678, 131072, 3, -327679, 131072, 3, -327680, 131072, 3, -262145, 131072, 3, -262146, 131072, 3, -262147, 131072, 3, -262148, 131072, 3, -262149, 131072, 3, -262150, 131072, 3, 65509, 131072, 1, 65508, 131072, 1, 65507, 131072, 1, 65506, 131072, 1, 65505, 393216, 2, -655366, 65536, 2, -589830, 65536, 2, -524294, 65536, 2, -458758, 65536, 2, -393222, 65536, 2, -327686, 65536, 2, -655391, 196608, 2, -589855, 196608, 2, -524319, 196608, 2, -458783, 196608, 2, -393247, 196608, 2, -327711, 196608, 2, -262175, 196608, 2, -196639, 196608, 2, -131103, 196608, 2, -65567, 196608, 2, -31, 196608, 2, -851999, 393216, 3, -786463, 196608, 2, -720927, 196608, 2, -786438, 65536, 2, -720902, 65536, 2, -851998, 131072, 3, -851997, 131072, 3, -851996, 131072, 3, -851995, 131072, 3, -851994, 131072, 3, -851993, 131072, 3, -851992, 131072, 3, -851991, 131072, 3, -851990, 131072, 3, -851989, 131072, 3, -851988, 131072, 3, -851987, 131072, 3, -851986, 131072, 3, -851985, 131072, 3, -851984, 131072, 3, -851983, 131072, 3, -851982, 131072, 3, -851981, 131072, 3, -851980, 131072, 3, -851979, 131072, 3, -851978, 131072, 3, -851977, 131072, 3, -851976, 131072, 3, -851975, 131072, 3, -589854, 65536, 9, -589853, 131072, 9, -589852, 196608, 9, -589833, 65536, 9, -589832, 131072, 9, -589831, 196608, 9, -524307, 65536, 10, -524306, 131072, 10, -524305, 196608, 10, -262132, 65536, 2, -196596, 65536, 2, -131060, 65536, 2, -65524, 65536, 2, -851974, 327680, 3)
layer_1/name = "Paint"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(-262174, 720896, 2, -196638, 720896, 2, -131102, 720896, 2, -65566, 720896, 2, -30, 720896, 2, -262173, 786432, 2, -196637, 786432, 2, -131101, 786432, 2, -65565, 786432, 2, -29, 786432, 2, -262172, 786432, 2, -196636, 786432, 2, -131100, 786432, 2, -65564, 786432, 2, -28, 786432, 2, -262171, 786432, 2, -196635, 786432, 2, -131099, 786432, 2, -65563, 786432, 2, -27, 786432, 2, -262170, 786432, 2, -196634, 786432, 2, -131098, 786432, 2, -65562, 786432, 2, -26, 786432, 2, -262169, 786432, 2, -196633, 786432, 2, -131097, 786432, 2, -65561, 786432, 2, -25, 786432, 2, -262168, 786432, 2, -196632, 786432, 2, -131096, 786432, 2, -65560, 786432, 2, -24, 786432, 2, -262167, 786432, 2, -196631, 786432, 2, -131095, 786432, 2, -65559, 786432, 2, -23, 786432, 2, -262166, 786432, 2, -196630, 786432, 2, -131094, 786432, 2, -65558, 786432, 2, -22, 786432, 2, -262165, 786432, 2, -196629, 786432, 2, -131093, 786432, 2, -65557, 786432, 2, -21, 786432, 2, -262164, 786432, 2, -196628, 786432, 2, -131092, 786432, 2, -65556, 786432, 2, -20, 786432, 2, -262163, 786432, 2, -196627, 786432, 2, -131091, 786432, 2, -65555, 786432, 2, -19, 786432, 2, -262162, 786432, 2, -196626, 786432, 2, -131090, 786432, 2, -65554, 786432, 2, -18, 786432, 2, -262161, 786432, 2, -196625, 786432, 2, -131089, 786432, 2, -65553, 786432, 2, -17, 786432, 2, -262160, 786432, 2, -196624, 786432, 2, -131088, 786432, 2, -65552, 786432, 2, -16, 786432, 2, -262159, 786432, 2, -196623, 786432, 2, -131087, 786432, 2, -65551, 786432, 2, -15, 786432, 2, -262158, 786432, 2, -196622, 786432, 2, -131086, 786432, 2, -65550, 786432, 2, -14, 786432, 2, -262157, 786432, 2, -196621, 786432, 2, -131085, 786432, 2, -65549, 786432, 2, -13, 786432, 2, -262156, 786432, 2, -196620, 786432, 2, -131084, 786432, 2, -65548, 786432, 2, -12, 786432, 2, -262155, 786432, 2, -196619, 786432, 2, -131083, 786432, 2, -65547, 786432, 2, -11, 786432, 2, -262154, 786432, 2, -196618, 786432, 2, -131082, 786432, 2, -65546, 786432, 2, -10, 786432, 2, -262153, 786432, 2, -196617, 786432, 2, -131081, 786432, 2, -65545, 786432, 2, -9, 786432, 2, -262152, 786432, 2, -196616, 786432, 2, -131080, 786432, 2, -65544, 786432, 2, -8, 786432, 2, -262151, 851968, 2, -196615, 786432, 2, -131079, 786432, 2, -65543, 786432, 2, -7, 786432, 2, -262150, 786432, 2, -196614, 786432, 1, -131078, 786432, 2, -65542, 786432, 2, -6, 786432, 2, -262149, 786432, 2, -196613, 786432, 1, -131077, 786432, 2, -65541, 786432, 2, -5, 786432, 2, -262148, 786432, 2, -196612, 786432, 1, -131076, 786432, 2, -65540, 786432, 2, -4, 786432, 2, -262147, 786432, 2, -196611, 786432, 1, -131075, 786432, 2, -65539, 786432, 2, -3, 786432, 2, -262146, 786432, 2, -196610, 786432, 1, -131074, 786432, 2, -65538, 786432, 2, -2, 786432, 2, -262145, 786432, 2, -196609, 786432, 1, -131073, 786432, 2, -65537, 786432, 2, -1, 786432, 2, -327680, 786432, 2, -262144, 786432, 1, -196608, 786432, 2, -131072, 786432, 2, -65536, 786432, 2, -327679, 786432, 2, -262143, 786432, 1, -196607, 786432, 2, -131071, 786432, 2, -65535, 786432, 2, -327678, 786432, 2, -262142, 786432, 1, -196606, 786432, 2, -131070, 786432, 2, -65534, 786432, 2, -327677, 786432, 2, -262141, 786432, 1, -196605, 786432, 2, -131069, 786432, 2, -65533, 786432, 2, -327676, 786432, 2, -262140, 786432, 1, -196604, 786432, 2, -131068, 786432, 2, -65532, 786432, 2, -327675, 786432, 2, -262139, 786432, 1, -196603, 786432, 2, -131067, 786432, 2, -65531, 786432, 2, -327674, 786432, 2, -262138, 786432, 1, -196602, 786432, 2, -131066, 786432, 2, -65530, 786432, 2, -327673, 786432, 2, -262137, 786432, 1, -196601, 786432, 2, -131065, 786432, 2, -65529, 786432, 2, -327672, 786432, 2, -262136, 786432, 1, -196600, 786432, 2, -131064, 786432, 2, -65528, 786432, 2, -327671, 786432, 2, -262135, 786432, 1, -196599, 786432, 2, -131063, 786432, 2, -65527, 786432, 2, -327670, 786432, 2, -262134, 786432, 1, -196598, 786432, 2, -131062, 786432, 2, -65526, 786432, 2, -327669, 786432, 2, -262133, 786432, 1, -196597, 786432, 2, -131061, 786432, 2, -65525, 786432, 2, -327668, 786432, 2, -262132, 786432, 2, -196596, 786432, 2, -131060, 786432, 2, -65524, 786432, 2, -786462, 720896, 1, -720926, 720896, 2, -655390, 720896, 2, -589854, 720896, 2, -524318, 720896, 2, -458782, 720896, 2, -393246, 720896, 2, -327710, 720896, 2, -786461, 786432, 1, -720925, 786432, 2, -655389, 786432, 2, -589853, 786432, 2, -524317, 786432, 2, -458781, 786432, 2, -393245, 786432, 2, -327709, 786432, 2, -786460, 786432, 1, -720924, 786432, 2, -655388, 786432, 2, -589852, 786432, 2, -524316, 786432, 2, -458780, 786432, 2, -393244, 786432, 2, -327708, 786432, 2, -786459, 786432, 1, -720923, 786432, 2, -655387, 786432, 2, -589851, 786432, 2, -524315, 786432, 2, -458779, 786432, 2, -393243, 786432, 2, -327707, 786432, 2, -786458, 786432, 1, -720922, 786432, 2, -655386, 786432, 2, -589850, 786432, 2, -524314, 786432, 2, -458778, 786432, 2, -393242, 786432, 2, -327706, 786432, 2, -786457, 786432, 1, -720921, 786432, 2, -655385, 786432, 2, -589849, 786432, 2, -524313, 786432, 2, -458777, 786432, 2, -393241, 786432, 2, -327705, 786432, 2, -786456, 786432, 1, -720920, 786432, 2, -655384, 786432, 2, -589848, 786432, 2, -524312, 786432, 2, -458776, 786432, 2, -393240, 786432, 2, -327704, 786432, 2, -786455, 786432, 1, -720919, 786432, 2, -655383, 786432, 2, -589847, 786432, 2, -524311, 786432, 2, -458775, 786432, 2, -393239, 786432, 2, -327703, 786432, 2, -786454, 786432, 1, -720918, 786432, 2, -655382, 786432, 2, -589846, 786432, 2, -524310, 786432, 2, -458774, 786432, 2, -393238, 786432, 2, -327702, 786432, 2, -786453, 786432, 1, -720917, 786432, 2, -655381, 786432, 2, -589845, 786432, 2, -524309, 786432, 2, -458773, 786432, 2, -393237, 786432, 2, -327701, 786432, 2, -786452, 786432, 1, -720916, 786432, 2, -655380, 786432, 2, -589844, 786432, 2, -524308, 786432, 2, -458772, 786432, 2, -393236, 786432, 2, -327700, 786432, 2, -786451, 786432, 1, -720915, 786432, 2, -655379, 786432, 2, -589843, 786432, 2, -524307, 786432, 2, -458771, 786432, 2, -393235, 786432, 2, -327699, 786432, 2, -786450, 786432, 1, -720914, 786432, 2, -655378, 786432, 2, -589842, 786432, 2, -524306, 786432, 2, -458770, 786432, 2, -393234, 786432, 2, -327698, 786432, 2, -786449, 786432, 1, -720913, 786432, 2, -655377, 786432, 2, -589841, 786432, 2, -524305, 786432, 2, -458769, 786432, 2, -393233, 786432, 2, -327697, 786432, 2, -786448, 786432, 1, -720912, 786432, 2, -655376, 786432, 2, -589840, 786432, 2, -524304, 786432, 2, -458768, 786432, 2, -393232, 786432, 2, -327696, 786432, 2, -786447, 786432, 1, -720911, 786432, 2, -655375, 786432, 2, -589839, 786432, 2, -524303, 786432, 2, -458767, 786432, 2, -393231, 786432, 2, -327695, 786432, 2, -786446, 786432, 1, -720910, 786432, 2, -655374, 786432, 2, -589838, 786432, 2, -524302, 786432, 2, -458766, 786432, 2, -393230, 786432, 2, -327694, 786432, 2, -786445, 786432, 1, -720909, 786432, 2, -655373, 786432, 2, -589837, 786432, 2, -524301, 786432, 2, -458765, 786432, 2, -393229, 786432, 2, -327693, 786432, 2, -786444, 786432, 1, -720908, 786432, 2, -655372, 786432, 2, -589836, 786432, 2, -524300, 786432, 2, -458764, 786432, 2, -393228, 786432, 2, -327692, 786432, 2, -786443, 786432, 1, -720907, 786432, 2, -655371, 786432, 2, -589835, 786432, 2, -524299, 786432, 2, -458763, 786432, 2, -393227, 786432, 2, -327691, 786432, 2, -786442, 786432, 1, -720906, 786432, 2, -655370, 786432, 2, -589834, 786432, 2, -524298, 786432, 2, -458762, 786432, 2, -393226, 786432, 2, -327690, 786432, 2, -786441, 786432, 1, -720905, 786432, 2, -655369, 786432, 2, -589833, 786432, 2, -524297, 786432, 2, -458761, 786432, 2, -393225, 786432, 2, -327689, 786432, 2, -786440, 786432, 1, -720904, 786432, 2, -655368, 786432, 2, -589832, 786432, 2, -524296, 786432, 2, -458760, 786432, 2, -393224, 786432, 2, -327688, 786432, 2, -786439, 851968, 1, -720903, 851968, 2, -655367, 851968, 2, -589831, 851968, 2, -524295, 851968, 2, -458759, 851968, 2, -393223, 851968, 2, -327687, 851968, 2)
layer_2/name = "Objects"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array()

[node name="Hero" parent="." instance=ExtResource("2_oiejt")]
position = Vector2(112, 0)

[node name="ShadowBoss" parent="." instance=ExtResource("3_sgme1")]
position = Vector2(-372, -1)

[node name="PlayerDetectionArea" type="Area2D" parent="."]
position = Vector2(-156, -12)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
position = Vector2(4, -20)
shape = SubResource("RectangleShape2D_1irk7")

[node name="Timer" type="Timer" parent="."]

[node name="TreasureChest" parent="." instance=ExtResource("5_wbwr1")]
visible = false
position = Vector2(-287, -1)
content = 3

[node name="CollapsingPlatform" parent="." instance=ExtResource("6_qny53")]
position = Vector2(-376, -80)

[node name="CollapsingPlatform3" parent="." instance=ExtResource("6_qny53")]
position = Vector2(-280, -32)

[node name="CollapsingPlatform2" parent="." instance=ExtResource("6_qny53")]
position = Vector2(-176, -80)

[node name="BigBox" parent="." instance=ExtResource("7_ei2rj")]
position = Vector2(-448, -184)

[node name="BigBox2" parent="." instance=ExtResource("7_ei2rj")]
position = Vector2(-280, -168)

[node name="BigBox3" parent="." instance=ExtResource("7_ei2rj")]
position = Vector2(-120, -184)

[node name="Trap" parent="." instance=ExtResource("8_o5bhu")]
position = Vector2(-480, -48)
frequency_secs = 2.0
firing = false

[node name="Trap3" parent="." instance=ExtResource("8_o5bhu")]
position = Vector2(-480, -168)
frequency_secs = 2.0

[node name="Trap2" parent="." instance=ExtResource("8_o5bhu")]
position = Vector2(-96, -96)
scale = Vector2(-1, 1)
frequency_secs = 2.0
firing = false

[node name="Portal" parent="." instance=ExtResource("9_cbhcp")]
position = Vector2(144, 0)
address_in_level = 2
destination_level = 15
destination_address = 7

[node name="PrisonBars" parent="." instance=ExtResource("10_5vn20")]
position = Vector2(-96, -64)
